--- a/tests/Torus.html
+++ b/tests/Torus.html
@@ -2,18 +2,35 @@
 <html>
 <head>
 	<title>Dojox-WebGl Torus</title>
-    
+
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"/>
-    
+
 	<!-- required: a default dijit theme: -->
-	<link id="themeStyles" rel="stylesheet" href="../../dijit/themes/claro/claro.css"/>
+	<link id="themeStyles" rel="stylesheet" href="../dojo/dijit/themes/claro/claro.css"/>
 
 	<!-- required: dojo.js -->
-	<script type="text/javascript" src="../../dojo/dojo.js"
-		data-dojo-config="isDebug: true"></script>
+	<script type="text/javascript" src="../dojo/dojo/dojo.js" data-dojo-config="isDebug: true"></script>
+	<script type="text/javascript" src="../vendor/three.js/Three.js" defer="defer"></script>
+	<script type="text/javascript" src="../vendor/three.js/Detector.js" defer="defer"></script>
+	<script type="text/javascript" src="../vendor/threex/THREEx.screenshot.js" defer="defer"></script>
+    <script type="text/javascript" src="../vendor/threex/THREEx.FullScreen.js" defer="defer"></script>
+    <script type="text/javascript" src="../vendor/threex/THREEx.WindowResize.js" defer="defer"></script>
+    <script type="text/javascript" src="../vendor/threex.dragpancontrols.js" defer="defer"></script>
+
 
     <script type="text/javascript">
-    require(["dojo", "../ThreejsWrapper.js","dojo/domReady!"], function(dojo, wrapper){
+    require(["dojo", "dojo/Ready", "../ThreejsWrapper.js", "dojo/dom"], function(dojo, ready, wrapper, dom){
+        console.log("wrapper : ", wrapper);
+        ready(function(){
+            // - you will most likely replace this part by your own
+            var geometry	= new THREE.TorusGeometry( 1, 0.42 );
+            var material	= new THREE.MeshNormalMaterial();
+            var mesh	= new THREE.Mesh( geometry, material );
+            var container = dom.byId("container");
+            var ctrl = new wrapper({containerNode : container});
+            ctrl.addMesh(mesh);
+        });
+
     });
     </script>
 
