Updated wrapper object to support a standard api that will be used through all wrappers. Also started a Controller empty skelletton

--- a/tests/Torus.html
+++ b/tests/Torus.html
@@ -29,6 +29,7 @@
             var container = dom.byId("container");
             var ctrl = new wrapper({containerNode : container});
             ctrl.addMesh(mesh);
+            ctrl.getScene();
         });
 
     });
