--- a/tests/Torus.html
+++ b/tests/Torus.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Dojox-WebGl Torus</title>
 
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
 	<!-- required: a default dijit theme: -->
-	<link id="themeStyles" rel="stylesheet" href="../dojo/dijit/themes/claro/claro.css"/>
+<!--	<link id="themeStyles" rel="stylesheet" href="../dojo/dijit/themes/claro/claro.css"/> -->
 
 	<!-- required: dojo.js -->
-	<script type="text/javascript" src="../dojo/dojo/dojo.js" data-dojo-config="isDebug: true"></script>
+    <script type="text/javascript" data-dojo-config="async:true, cacheBust:new Date(), waitSeconds:5" src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.3/dojo/dojo.js"></script>
 	<script type="text/javascript" src="../vendor/three.js/Three.js" defer="defer"></script>
 	<script type="text/javascript" src="../vendor/three.js/Detector.js" defer="defer"></script>
 	<script type="text/javascript" src="../vendor/threex/THREEx.screenshot.js" defer="defer"></script>
@@ -17,9 +17,9 @@
     <script type="text/javascript" src="../vendor/threex/THREEx.WindowResize.js" defer="defer"></script>
     <script type="text/javascript" src="../vendor/threex.dragpancontrols.js" defer="defer"></script>
 
-    <script type="text/javascript">
+    <script type="text/javascript" defer="defer">
     require([
-        "dojo", "dojo/Ready", "dojo/dom", "../ThreejsWrapper.js", "../Controller.js"
+        "dojo", "dojo/ready", "dojo/dom", "../ThreejsWrapper.js", "../Controller.js"
     ], function(dojo, ready, dom, wrapper, controller){
         ready(function(){
             var container = dom.byId("container"),
