--- a/tests/Torus.html
+++ b/tests/Torus.html
@@ -9,7 +9,18 @@
 <!--	<link id="themeStyles" rel="stylesheet" href="../dojo/dijit/themes/claro/claro.css"/> -->
 
 	<!-- required: dojo.js -->
-    <script type="text/javascript" data-dojo-config="async:true, cacheBust:new Date(), waitSeconds:5" src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.3/dojo/dojo.js"></script>
+    <script type="text/javascript" defer="defer">
+        dojoConfig = {
+            baseUrl : "./",
+            paths: {
+                "dwebgl": "../../dwebgl"
+            },
+            async:true,
+            cacheBust:new Date(),
+            waitSeconds:5
+        };
+    </script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.3/dojo/dojo.js"></script>
 	<script type="text/javascript" src="../vendor/three.js/Three.js" defer="defer"></script>
 	<script type="text/javascript" src="../vendor/three.js/Detector.js" defer="defer"></script>
 	<script type="text/javascript" src="../vendor/threex/THREEx.screenshot.js" defer="defer"></script>
@@ -19,7 +30,7 @@
 
     <script type="text/javascript" defer="defer">
     require([
-        "dojo", "dojo/ready", "dojo/dom", "../ThreejsWrapper.js", "../Controller.js"
+        "dojo", "dojo/ready", "dojo/dom", "dwebgl/ThreejsWrapper", "dwebgl/Controller"
     ], function(dojo, ready, dom, wrapper, controller){
         ready(function(){
             var container = dom.byId("container"),
