Moved requires for three.js and threex to the wrapper

--- a/tests/Torus.html
+++ b/tests/Torus.html
@@ -5,15 +5,14 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 
-	<!-- required: a default dijit theme: -->
-<!--	<link id="themeStyles" rel="stylesheet" href="../dojo/dijit/themes/claro/claro.css"/> -->
+    <link id="themeStyles" rel="stylesheet" href="css/style.css"/>
 
 	<!-- required: dojo.js -->
     <script type="text/javascript" defer="defer">
         dojoConfig = {
-            baseUrl : "./",
+            baseUrl : "../../",
             paths: {
-                "dwebgl": "../../dwebgl"
+                "dwebgl": "dwebgl"
             },
             async:true,
             cacheBust:new Date(),
@@ -21,12 +20,13 @@
         };
     </script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.3/dojo/dojo.js"></script>
-	<script type="text/javascript" src="../vendor/three.js/Three.js" defer="defer"></script>
-	<script type="text/javascript" src="../vendor/three.js/Detector.js" defer="defer"></script>
+<!--	<script type="text/javascript" src="../vendor/three.js/Three.js"></script>
+	<script type="text/javascript" src="../vendor/three.js/Detector.js"></script>
 	<script type="text/javascript" src="../vendor/threex/THREEx.screenshot.js" defer="defer"></script>
     <script type="text/javascript" src="../vendor/threex/THREEx.FullScreen.js" defer="defer"></script>
     <script type="text/javascript" src="../vendor/threex/THREEx.WindowResize.js" defer="defer"></script>
     <script type="text/javascript" src="../vendor/threex.dragpancontrols.js" defer="defer"></script>
+-->
 
     <script type="text/javascript" defer="defer">
     require([
